# ros2_robotics_ws

./: README.md
Diff_robot_project_broadcast_odometry/src/main_controller/: CMakeLists.txt  package.xml
Diff_robot_project_broadcast_odometry/src/main_controller/main_controller/: custom_controller.py
Diff_robot_project_draw_trajectory/src/diff_robot_description/: package.xml
Diff_robot_project_draw_trajectory/src/diff_robot_description/launch/: gazebo_sim.launch.py
Diff_robot_project_draw_trajectory/src/diff_robot_description/urdf/: diff_robot.urdf.xacro
Diff_robot_project_draw_trajectory/src/main_controller/: CMakeLists.txt  package.xml
Diff_robot_project_draw_trajectory/src/main_controller/launch/: controller.launch.py
Diff_robot_project_draw_trajectory/src/main_controller/main_controller/: custom_controller.py
Diff_robot_project_draw_trajectory/src/movement_trajectory/: package.xml  setup.cfg  setup.py
Diff_robot_project_draw_trajectory/src/movement_trajectory/movement_trajectory/: trajectory_publisher.py
Diff_robot_project_drift_due_to_noise/src/diff_robot_description/launch/: rviz_display.launch.py
Diff_robot_project_drift_due_to_noise/src/diff_robot_description/urdf/: diff_robot_gazebo.xacro
Diff_robot_project_drift_due_to_noise/src/main_controller/: CMakeLists.txt  package.xml
Diff_robot_project_drift_due_to_noise/src/main_controller/config/: main_controllers.yaml
Diff_robot_project_drift_due_to_noise/src/main_controller/launch/: controller.launch.py
Diff_robot_project_drift_due_to_noise/src/main_controller/main_controller/: ideal_controller.py  real_controller.py
Diff_robot_project_keyboard_move_and_publish_pose/src/diff_robot_description/: CMakeLists.txt
Diff_robot_project_keyboard_move_and_publish_pose/src/main_controller/: CMakeLists.txt  package.xml
Diff_robot_project_keyboard_move_and_publish_pose/src/main_controller/launch/: keyboard_teleop.launch.py
Diff_robot_project_keyboard_move_and_publish_pose/src/main_controller/main_controller/: custom_controller.py
