<?xml version="1.0"?>
<package format="3">
  <name>main_controller</name>
  <version>0.0.0</version>
  <description>The main_controller package</description>
  <maintainer email="Oyoussef@nu.edu.eg">Omnia A.Youssef</maintainer>
  <license>Apache 2.0</license>
  <author email="Oyoussef@nu.edu.eg">Omnia A.Youssef</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

 


  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  
  <exec_depend>ros2_controllers</exec_depend>

  <exec_depend>tf_transformations</exec_depend> 
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
